syntax = "proto3";

package yandex.cloud.priv.ai.sttfeedback.v1.console;

import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/ai/sttfeedback/v1/console;sttfeedback_console";

service SttFeedbackService {
    rpc SendAudio (SendAudioRequest) returns (SendAudioResponse) {
    }

    rpc EvaluateRecognitions (EvaluateRecognitionsRequest) returns (EvaluateRecognitionsResponse) {
    }
}

message SendAudioRequest {
    oneof audio_source {
        AudioSourceFile audio_file = 1;
    }
    string reference_transcript = 2 [(length) = "<=10000"];
    string comment = 3 [(length) = "<=1000"];
    string folder_id = 4 [(length) = "<=50"];
}

message AudioSourceFile {
    bytes audio_content = 1 [(required) = true, (length) = "<=10485760"];
    string file_name = 2 [(required) = true, (length) = "<=100"];
}

message SendAudioResponse {
    string audio_id = 1;
    repeated Recognition recognitions = 2;
}

message Recognition {
    string api = 1;
    string model = 2;
    string transcript = 3;
    string display_api = 4;
}

message EvaluateRecognitionsRequest {
    string audio_id = 1 [(required) = true];
    repeated RecognitionEvaluation evaluations = 2;
    string folder_id = 3 [(length) = "<=50"];
}

message RecognitionEvaluation {
    bool ok = 1;
    string comment = 2 [(length) = "<=1000"];
}

message EvaluateRecognitionsResponse {
}
